# SmartHome

./: CMakeLists.txt  README.md
driver/: 虚拟器.txt
driver/GY39_drv/: .GY39.ko.cmd  .GY39.mod.cmd  .GY39.mod.o.cmd  .GY39.o.cmd  .Module.symvers.cmd  .modules.order.cmd  GY39.c  GY39.ko  GY39.mod  GY39.mod.c  GY39_test  GY39_test.c  Makefile  a.out  modules.order  test  操作方法.txt
driver/event_drv/: .Module.symvers.cmd  .event_drv.ko.cmd  .event_drv.mod.cmd  .event_drv.mod.o.cmd  .event_drv.o.cmd  .modules.order.cmd  Makefile  event_drv.ko  event_drv.mod  event_drv.mod.c  modules.order
driver/event_drv/.tmp_versions/: event_drv.mod
driver/mmp_drv/: .Module.symvers.cmd  .mmp_drv.ko.cmd  .mmp_drv.mod.cmd  .mmp_drv.mod.o.cmd  .mmp_drv.o.cmd  .modules.order.cmd  Makefile  mmp_drv.c  mmp_drv.ko  mmp_drv.mod  mmp_drv.mod.c  modules.order
driver/mmp_drv/.tmp_versions/: mmp_drv.mod
driver/smoke_drv/: .Module.symvers.cmd  .modules.order.cmd  .smoke.ko.cmd  .smoke.mod.cmd  .smoke.mod.o.cmd  .smoke.o.cmd  Makefile  a.out  modules.order  smoke.c  smoke.ko  smoke.mod  smoke.mod.c  smoke_test.c  test  操作方法.txt
include/: TempAndHumi.h  UTF816x16.h  char8x16.h  event_lcd.h  game2048.h  lcd.h  smoke.h
source/: TempAndHumi.c  event_lcd.c  game2048.c  lcd.c  main.c  smoke.c
